Pequenos ajustes no projeto

--- a/app/src/main/res/layout/activity_cadastro_cliente.xml
+++ b/app/src/main/res/layout/activity_cadastro_cliente.xml
@@ -93,6 +93,7 @@
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/text_cadastro_background"
                 android:hint="Nome"
+                android:maxLength="45"
                 android:inputType="textCapWords"
                 android:paddingLeft="12dp"
                 android:textColorHint="@color/black"
@@ -110,6 +111,7 @@
                 android:background="@drawable/text_cadastro_background"
                 android:hint="Telefone"
                 android:inputType="phone"
+                android:maxLength="11"
                 android:paddingLeft="12dp"
                 android:textColorHint="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -142,6 +144,7 @@
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/text_cadastro_background"
                 android:hint="Email"
+                android:maxLength="45"
                 android:inputType="textEmailAddress"
                 android:paddingLeft="12dp"
                 android:textColorHint="@color/black"
@@ -191,6 +194,7 @@
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/text_cadastro_background"
                 android:hint="Estado"
+                android:maxLength="45"
                 android:inputType="textCapWords"
                 android:paddingLeft="12dp"
                 android:textColorHint="@color/black"
@@ -207,6 +211,7 @@
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/text_cadastro_background"
                 android:hint="Cidade"
+                android:maxLength="45"
                 android:inputType="textCapWords"
                 android:paddingLeft="12dp"
                 android:textColorHint="@color/black"
@@ -222,6 +227,7 @@
                 android:layout_marginTop="9dp"
                 android:background="@drawable/text_cadastro_background"
                 android:hint="Rua"
+                android:maxLength="45"
                 android:inputType="textCapWords"
                 android:paddingLeft="12dp"
                 android:textColorHint="@color/black"
