--- a/app/src/main/res/layout/activity_perfil_costureira.xml
+++ b/app/src/main/res/layout/activity_perfil_costureira.xml
@@ -30,23 +30,23 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/activity_perfil_costureira_editar"
-                app:layout_constraintStart_toEndOf="@+id/activity_perfil_costureira_fab_voltar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/activity_perfil_costureira_editar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:backgroundTint="@color/rosa_light"
-                android:scaleX="0.7"
-                android:scaleY="0.7"
-                android:src="@drawable/lapis_edicao"
-                app:borderWidth="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+<!--            <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--                android:id="@+id/activity_perfil_costureira_editar"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_margin="4dp"-->
+<!--                android:backgroundTint="@color/rosa_light"-->
+<!--                android:scaleX="0.7"-->
+<!--                android:scaleY="0.7"-->
+<!--                android:src="@drawable/lapis_edicao"-->
+<!--                app:borderWidth="0dp"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/activity_perfil_costureira_fab_voltar"
