--- a/app/src/main/res/layout/recycler_clientes_item.xml
+++ b/app/src/main/res/layout/recycler_clientes_item.xml
@@ -9,18 +9,18 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:strokeWidth="2dp"
-        app:strokeColor="@color/roxo"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="16dp"
+        android:layout_marginBottom="8dp"
         app:cardBackgroundColor="@color/white"
         app:cardElevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="@color/roxo"
+        app:strokeWidth="2dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -32,14 +32,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                app:strokeWidth="4dp"
-                app:strokeColor="@color/rosa"
                 android:layout_marginBottom="8dp"
                 app:cardBackgroundColor="@color/rosa_light"
                 app:cardCornerRadius="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:strokeColor="@color/rosa"
+                app:strokeWidth="4dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -56,9 +56,9 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHeight_max="100dp"
-                        app:layout_constraintWidth_max="100dp"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintWidth_max="100dp" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -66,34 +66,40 @@
 
             <TextView
                 android:id="@+id/clientes_item_nome_cliente"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:textColor="@color/rosa_dark"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@id/clientes_item_numero_celular"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="@id/clientes_item_numero_celular"
                 tools:text="Nome do Cliente" />
 
             <TextView
                 android:id="@+id/clientes_item_numero_celular"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:textColor="@color/rosa_dark"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@id/recycler_clientes_item_cardView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toEndOf="@id/recycler_clientes_item_cardView"
                 app:layout_constraintTop_toTopOf="@id/recycler_clientes_item_cardView"
                 tools:text="Número do Celular" />
 
             <TextView
                 android:id="@+id/clientes_item_data_nascimento"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:textColor="@color/rosa_dark"
                 android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="@id/clientes_item_numero_celular"
                 app:layout_constraintTop_toBottomOf="@id/clientes_item_numero_celular"
                 tools:text="Pedidos realizados" />
