--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -90,6 +90,7 @@
                 android:background="@drawable/text_cadastro_background"
                 android:hint="Telefone"
                 android:inputType="phone"
+                android:maxLength="11"
                 android:paddingLeft="12dp"
                 android:textColorHint="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -122,6 +123,7 @@
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/text_cadastro_background"
                 android:hint="Email"
+                android:maxLength="45"
                 android:inputType="textEmailAddress"
                 android:paddingLeft="12dp"
                 android:textColorHint="@color/black"
@@ -171,6 +173,7 @@
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/text_cadastro_background"
                 android:hint="Estado"
+                android:maxLength="45"
                 android:inputType="textCapWords"
                 android:paddingLeft="12dp"
                 android:textColorHint="@color/black"
@@ -187,6 +190,7 @@
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/text_cadastro_background"
                 android:hint="Cidade"
+                android:maxLength="45"
                 android:inputType="textCapWords"
                 android:paddingLeft="12dp"
                 android:textColorHint="@color/black"
@@ -204,6 +208,7 @@
                 android:hint="Rua"
                 android:inputType="textCapWords"
                 android:paddingLeft="12dp"
+                android:maxLength="45"
                 android:textColorHint="@color/black"
                 app:layout_constraintEnd_toStartOf="@id/activity_cadastro_txt_numero"
                 app:layout_constraintStart_toStartOf="parent"
