--- a/app/src/main/res/layout/activity_cadastro_pedido.xml
+++ b/app/src/main/res/layout/activity_cadastro_pedido.xml
@@ -94,6 +94,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="78dp"
                 android:layout_marginEnd="78dp"
+                android:maxLength="20"
                 android:background="@drawable/text_cadastro_background"
                 android:inputType="text"
                 android:padding="4dp"
