--- a/app/src/main/res/layout/activity_detalhes_pedido.xml
+++ b/app/src/main/res/layout/activity_detalhes_pedido.xml
@@ -13,7 +13,6 @@
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/rosa"
         app:cardElevation="0dp"
-        app:layout_constraintBottom_toTopOf="@id/activity_detalhes_pedido_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -76,8 +75,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/activity_detalhes_pedido_toolbar"
-        tools:layout_editor_absoluteX="8dp">
+        app:layout_constraintTop_toBottomOf="@+id/activity_detalhes_pedido_toolbar">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -93,7 +91,6 @@
                 android:layout_marginBottom="8dp"
                 app:cardBackgroundColor="@color/rosa_dark"
                 app:cardCornerRadius="4dp"
-                app:layout_constraintBottom_toTopOf="@id/activity_detalhes_pedido_descricao"
                 app:layout_constraintEnd_toStartOf="@id/activity_detalhes_pedido_txt_titulo"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -345,7 +342,7 @@
                 android:paddingEnd="8dp"
                 android:textColor="@color/rosa_dark"
                 android:textSize="24sp"
-                app:layout_constraintStart_toStartOf="@+id/activity_detalhes_pedido_cardview_descricao"
+                app:layout_constraintStart_toStartOf="@+id/activity_detalhes_pedido_recycler_materiais"
                 app:layout_constraintTop_toBottomOf="@+id/activity_detalhes_pedido_cardview_descricao"
                 tools:text="Alta" />
 
@@ -382,7 +379,7 @@
                 android:paddingEnd="8dp"
                 android:textColor="@color/rosa_dark"
                 android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="@+id/activity_detalhes_pedido_cardview_descricao"
+                app:layout_constraintEnd_toEndOf="@+id/activity_detalhes_pedido_recycler_materiais"
                 app:layout_constraintTop_toBottomOf="@+id/activity_detalhes_pedido_cardview_descricao"
                 tools:text="R$: 26,00" />
 
@@ -410,16 +407,16 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/activity_detalhes_pedido_linha_preco" />
 
-<!--            <ImageButton-->
-<!--                android:id="@+id/activity_detalhes_pedido_fab_add_material"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginStart="8dp"-->
-<!--                android:background="@android:color/transparent"-->
-<!--                android:src="@drawable/ic_add"-->
-<!--                app:layout_constraintBottom_toBottomOf="@id/activity_detalhes_pedido_materiais"-->
-<!--                app:layout_constraintStart_toEndOf="@id/activity_detalhes_pedido_materiais"-->
-<!--                app:layout_constraintTop_toTopOf="@id/activity_detalhes_pedido_materiais" />-->
+            <!--            <ImageButton-->
+            <!--                android:id="@+id/activity_detalhes_pedido_fab_add_material"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginStart="8dp"-->
+            <!--                android:background="@android:color/transparent"-->
+            <!--                android:src="@drawable/ic_add"-->
+            <!--                app:layout_constraintBottom_toBottomOf="@id/activity_detalhes_pedido_materiais"-->
+            <!--                app:layout_constraintStart_toEndOf="@id/activity_detalhes_pedido_materiais"-->
+            <!--                app:layout_constraintTop_toTopOf="@id/activity_detalhes_pedido_materiais" />-->
 
             <RelativeLayout
                 android:id="@+id/activity_detalhes_pedido_linha_materiais"
@@ -437,8 +434,8 @@
                 android:id="@+id/activity_detalhes_pedido_recycler_materiais"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -460,16 +457,16 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/activity_detalhes_pedido_recycler_materiais" />
 
-<!--            <ImageButton-->
-<!--                android:id="@+id/activity_detalhes_pedido_fab_add_medida"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginStart="8dp"-->
-<!--                android:background="@android:color/transparent"-->
-<!--                android:src="@drawable/ic_add"-->
-<!--                app:layout_constraintBottom_toBottomOf="@id/activity_detalhes_pedido_medidas"-->
-<!--                app:layout_constraintStart_toEndOf="@id/activity_detalhes_pedido_medidas"-->
-<!--                app:layout_constraintTop_toTopOf="@id/activity_detalhes_pedido_medidas" />-->
+            <!--            <ImageButton-->
+            <!--                android:id="@+id/activity_detalhes_pedido_fab_add_medida"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginStart="8dp"-->
+            <!--                android:background="@android:color/transparent"-->
+            <!--                android:src="@drawable/ic_add"-->
+            <!--                app:layout_constraintBottom_toBottomOf="@id/activity_detalhes_pedido_medidas"-->
+            <!--                app:layout_constraintStart_toEndOf="@id/activity_detalhes_pedido_medidas"-->
+            <!--                app:layout_constraintTop_toTopOf="@id/activity_detalhes_pedido_medidas" />-->
 
             <RelativeLayout
                 android:id="@+id/activity_detalhes_pedido_linha_recycler_medidas"
