--- a/app/src/main/res/layout/activity_detalhes_pedido.xml
+++ b/app/src/main/res/layout/activity_detalhes_pedido.xml
@@ -245,7 +245,7 @@
                 android:layout_height="14dp"
                 android:layout_marginTop="16dp"
                 android:paddingStart="8dp"
-                android:text="Data de Entrega "
+                android:text="Data de Entrega: "
                 android:textColor="@color/azul"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toTopOf="@id/activity_detalhes_pedido_txt_dataEntrega"
