--- a/app/src/main/res/layout/recycler_clientes_item.xml
+++ b/app/src/main/res/layout/recycler_clientes_item.xml
@@ -92,7 +92,7 @@
                 tools:text="Número do Celular" />
 
             <TextView
-                android:id="@+id/clientes_item_data_nascimento"
+                android:id="@+id/clientes_item_email"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -102,7 +102,7 @@
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="@id/clientes_item_numero_celular"
                 app:layout_constraintTop_toBottomOf="@id/clientes_item_numero_celular"
-                tools:text="Pedidos realizados" />
+                tools:text="Email" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
